src/test/ui/loops/loop-labeled-break-value.stderr
error[E0308]: mismatched types
  --> $DIR/loop-labeled-break-value.rs:3:29
   |
LL |         let _: i32 = loop { break };
   |                             ^^^^^ expected (), found i32
   |
   = note: expected type `()`
              found type `i32`

error[E0308]: mismatched types
  --> $DIR/loop-labeled-break-value.rs:6:37
   |
LL |         let _: i32 = 'inner: loop { break 'inner };
   |                                     ^^^^^^^^^^^^ expected (), found i32
   |
   = note: expected type `()`
              found type `i32`

error[E0308]: mismatched types
  --> $DIR/loop-labeled-break-value.rs:9:45
   |
LL |         let _: i32 = 'inner2: loop { loop { break 'inner2 } };
   |                                             ^^^^^^^^^^^^^ expected (), found i32
   |
   = note: expected type `()`
              found type `i32`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
